--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "cy:open": "cypress open",
-    "cy:run": "cypress run"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -41,7 +39,6 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^7.4.0",
     "eslint": "^7.27.0",
     "eslint-plugin-react": "^7.24.0",
     "react-styleguidist": "^11.1.6"
